objects/Waiver_Rule_List__c.object
<CustomObject>
    <fields>
        <fullName>AIA_Is_Sync_Message__c</fullName>
        <description>This field will provide success or error message from AIA</description>
        <label>AIA Is Sync Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AcceptRisk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AcceptRisk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Manager_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Manager Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Waiver_Rule_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Freeze__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval Freeze</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Collaborator_Details__c</fullName>
        <label>Collaborator Details</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Closing_Comment__c</fullName>
        <label>Customer Closing Comment</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Review_Request__c</fullName>
        <label>Customer Review Request</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Delegation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delegation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Design_Rule_Name__c</fullName>
        <label>Design Rule Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disagree__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disagree</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final_Stage__c</fullName>
        <label>Final Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Status__c</fullName>
        <formula>IF (UPPER(Final_Stage__c) == &quot;PI&quot;,&quot;/resource/DWC/DWC/PI.JPG&quot;, 
IF (UPPER(Final_Stage__c) == &quot;PW&quot;,&quot;/resource/DWC/DWC/PW.JPG&quot;, 
IF (UPPER(Final_Stage__c) == &quot;PWA&quot;,&quot;/resource/DWC/DWC/PW.JPG&quot;, 
IF (UPPER(Final_Stage__c) == &quot;FD&quot;, &quot;/resource/DWC/DWC/FD.JPG&quot;, 
IF (UPPER(Final_Stage__c) == &quot;IFD&quot;,&quot;/resource/DWC/DWC/IFD.JPG&quot;, 
IF (UPPER(Final_Stage__c) == &quot;FCF&quot;, &quot;/resource/DWC/DWC/FCF.JPG&quot;, 
IF (UPPER(Final_Stage__c) == &quot;FCC&quot;,&quot;/resource/DWC/DWC/FCC.JPG&quot;, 
IF (UPPER(Final_Stage__c) == &quot;WCR&quot;,&quot;/resource/DWC/DWC/WCR.JPG&quot;, 
IF (UPPER(Final_Stage__c) == &quot;WEA&quot;,&quot;/resource/DWC/DWC/WEA.JPG&quot;, 
IF (UPPER(Final_Stage__c) == &quot;POC&quot;, &quot;/resource/DWC/DWC/POC.JPG&quot;, 
IF (UPPER(Final_Stage__c) == &quot;PWO&quot;,&quot;/resource/DWC/DWC/PWO.JPG&quot;, 
IF (UPPER(Final_Stage__c) == &quot;FCD&quot;,&quot;/resource/DWC/DWC/FCD.JPG&quot;,
IF (UPPER(Final_Stage__c) == &quot;PA&quot;, &quot;/resource/DWC/DWC/PA.JPG&quot;, 
IF (UPPER(Final_Stage__c) == &quot;POF&quot;,&quot;/resource/DWC/DWC/POF.JPG&quot;, 
&quot;/resource/DWC/DWC/OPEN.JPG&quot;))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flat_Error_Count__c</fullName>
        <label>Flat Error Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GF_Internal_Closing_Comment__c</fullName>
        <label>GF Internal Closing Comment</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GF_Review_Comment__c</fullName>
        <label>GF Review Comment</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GF_Review_Result__c</fullName>
        <formula>IF (UPPER(Stage__c) == &quot;PI&quot;,IMAGE(&quot;/resource/DWC/DWC/PI.JPG&quot;,&quot;&quot;,25,50), 
IF (UPPER(Stage__c) == &quot;PA&quot;, IMAGE(&quot;/resource/DWC/DWC/PA.JPG&quot;,&quot;&quot;,25,50), 
IF (UPPER(Stage__c) == &quot;PWA&quot;,IMAGE( &quot;/resource/DWC/DWC/PW.JPG&quot; ,&quot;&quot;,25,50), 
IF (UPPER(Stage__c) == &quot;PW&quot;, IMAGE(&quot;/resource/DWC/DWC/PW.JPG&quot; ,&quot;&quot;,25,50),
IF (OR(UPPER(Stage__c) == &quot;FD&quot;, UPPER(Stage__c) == &quot;IFD&quot;), IMAGE(&quot;/resource/DWC/DWC/IFD.JPG&quot;,&quot;&quot;,25,50), 
IF (UPPER(Stage__c) == &quot;FCC&quot;, IMAGE(&quot;/resource/DWC/DWC/FCC.JPG&quot;,&quot;&quot;,25,50), 
IF (UPPER(Stage__c) == &quot;POC&quot;, IMAGE(&quot;/resource/DWC/DWC/POC.JPG&quot; ,&quot;&quot;, 25,50), 
IF (UPPER(Stage__c) == &quot;WCR&quot;, IMAGE(&quot;/resource/DWC/DWC/WCR.JPG&quot; ,&quot;&quot;,25,50), 
IF (UPPER(Stage__c) == &quot;WEA&quot;, IMAGE(&quot;/resource/DWC/DWC/WEA.JPG&quot; ,&quot;&quot;,25,50), 
IF (UPPER(Stage__c) == &quot;POF&quot;, IMAGE(&quot;/resource/DWC/DWC/POF.JPG&quot; ,&quot;&quot;,25,50), 
IF (UPPER(Stage__c) == &quot;FCF&quot;, IMAGE(&quot;/resource/DWC/DWC/FCF.JPG&quot; ,&quot;&quot;,25,50),
IF (UPPER(Stage__c) == &quot;PWO&quot;, &quot;/resource/DWC/DWC/PWO.JPG&quot; ,&apos;&apos;))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GF Review Result</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GF_Review_Results__c</fullName>
        <formula>IF (UPPER(Stage__c) == &quot;PI&quot;,&quot;/resource/DWC/DWC/PI.JPG&quot;, 
IF (UPPER(Stage__c) == &quot;PA&quot;, &quot;/resource/DWC/DWC/PA.JPG&quot; , 
IF (UPPER(Stage__c) == &quot;PWA&quot;, &quot;/resource/DWC/DWC/PW.JPG&quot; , 
IF (UPPER(Stage__c) == &quot;PW&quot;, &quot;/resource/DWC/DWC/PW.JPG&quot; , 
IF (OR(UPPER(Stage__c) == &quot;FD&quot;, UPPER(Stage__c) == &quot;IFD&quot;), &quot;/resource/DWC/DWC/IFD.JPG&quot; , 
IF (UPPER(Stage__c) == &quot;FCC&quot;, &quot;/resource/DWC/DWC/FCC.JPG&quot; , 
IF (UPPER(Stage__c) == &quot;POC&quot;, &quot;/resource/DWC/DWC/POC.JPG&quot; , 
IF (UPPER(Stage__c) == &quot;WCR&quot;, &quot;/resource/DWC/DWC/WCR.JPG&quot; , 
IF (UPPER(Stage__c) == &quot;WEA&quot;, &quot;/resource/DWC/DWC/WEA.JPG&quot; , 
IF (UPPER(Stage__c) == &quot;POF&quot;, &quot;/resource/DWC/DWC/POF.JPG&quot; , 
IF (UPPER(Stage__c) == &quot;FCF&quot;, &quot;/resource/DWC/DWC/FCF.JPG&quot; , 
IF (UPPER(Stage__c) == &quot;PWO&quot;, &quot;/resource/DWC/DWC/PWO.JPG&quot; ,&apos;&apos;))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GF Review Results</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hierarchial_Error_Count__c</fullName>
        <label>Hierarchical Rule Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ImageId__c</fullName>
        <label>ImageId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_Name__c</fullName>
        <label>Image Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_Path__c</fullName>
        <label>Image Path</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <formula>IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos;+ImageId__c,&quot;&quot;,100,100)</formula>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsCustomerAcceptsRisk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Customer Accepts Risk?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCustomerAgreeToFix__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Customer Agree To Fix?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsGfAcceptsRisk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is GF Accepts Risk?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsReady__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsReady</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Sync_with_AIA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be indicator for all images related to rule has been saved in SFDC.</description>
        <label>Is Sync with AIA?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Layer_Name__c</fullName>
        <label>Layer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MantisId__c</fullName>
        <formula>Text(Waiver_Collaborator__r.MantisId__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MantisId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mantis_Id__c</fullName>
        <label>Mantis Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mantis_Stage__c</fullName>
        <description>Holds the relevant Mantis Stage</description>
        <label>Mantis Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Violation__c</fullName>
        <label>Number of Violation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Old_Image_Path__c</fullName>
        <label>Old Image Path</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Operation_Type__c</fullName>
        <label>Operation Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prime_Die_Comment__c</fullName>
        <label>Prime Die Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Prime_Die_Name__c</fullName>
        <description>data here comes from the integration</description>
        <label>Prime Die</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prime_Die_Status__c</fullName>
        <label>Prime Die Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecallApprovalProcess__c</fullName>
        <label>RecallApprovalProcess</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revert_Rule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Revert Rule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RuleId_Txt__c</fullName>
        <formula>Text(RuleId__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RuleId_Txt</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RuleId__c</fullName>
        <externalId>true</externalId>
        <label>RuleId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rule_Description__c</fullName>
        <label>Rule Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rule_Final_Status__c</fullName>
        <formula>IF(ISPICKVAL($Profile.UserType ,&quot;Standard&quot;), 
IF (UPPER(Final_Stage__c) == &quot;PI&quot;, IMAGE (&quot;/resource/DWC/DWC/PI.JPG&quot;, &quot;&quot;, 25, 50), 
IF (UPPER(Final_Stage__c) == &quot;PW&quot;, IMAGE (&quot;/resource/DWC/DWC/PW.JPG&quot;, &quot;&quot;, 25, 50), 
IF (UPPER(Final_Stage__c) == &quot;PWA&quot;, IMAGE (&quot;/resource/DWC/DWC/PW.JPG&quot;, &quot;&quot;, 25, 50), 
IF (UPPER(Final_Stage__c) == &quot;FD&quot;, IMAGE (&quot;/resource/DWC/DWC/FD.JPG&quot;, &quot;&quot;, 25, 50), 
IF (UPPER(Final_Stage__c) == &quot;IFD&quot;, IMAGE (&quot;/resource/DWC/DWC/IFD.JPG&quot;, &quot;&quot;, 25, 50), 
IF (UPPER(Final_Stage__c) == &quot;FCF&quot;, IMAGE (&quot;/resource/DWC/DWC/FCF.JPG&quot;, &quot;&quot;, 25, 50), 
IF (UPPER(Final_Stage__c) == &quot;FCC&quot;, IMAGE (&quot;/resource/DWC/DWC/FCC.JPG&quot;, &quot;&quot;, 25, 50), 
IF (UPPER(Final_Stage__c) == &quot;WCR&quot;, IMAGE (&quot;/resource/DWC/DWC/WCR.JPG&quot;, &quot;&quot;, 25, 50), 
IF (UPPER(Final_Stage__c) == &quot;WEA&quot;, IMAGE (&quot;/resource/DWC/DWC/WEA.JPG&quot;, &quot;&quot;, 25, 50), 
IF (UPPER(Final_Stage__c) == &quot;POC&quot;, IMAGE (&quot;/resource/DWC/DWC/POC.JPG&quot;, &quot;&quot;, 25, 50), 
IF (UPPER(Final_Stage__c) == &quot;PWO&quot;, IMAGE (&quot;/resource/DWC/DWC/PWO.JPG&quot;, &quot;&quot;, 25, 50), 
IF (UPPER(Final_Stage__c) == &quot;FCD&quot;, IMAGE (&quot;/resource/DWC/DWC/FCD.JPG&quot;, &quot;&quot;, 25, 50),
IF (UPPER(Final_Stage__c) == &quot;PA&quot;, IMAGE (&quot;/resource/DWC/DWC/PA.JPG&quot;, &quot;&quot;, 25, 50), 
IF (UPPER(Final_Stage__c) == &quot;POF&quot;, IMAGE (&quot;/resource/DWC/DWC/POF.JPG&quot;, &quot;&quot;, 25, 50), 
IMAGE (&quot;/resource/DWC/DWC/OPEN.JPG&quot;, &quot;&quot;, 25, 50))))))))))))))), 
IF (UPPER(Final_Stage__c) == &quot;PI&quot;, IMAGE (&quot;/GlobalfoundryView/resource/DWC/DWC/PI.JPG&quot;, &quot;&quot;, 25, 50), 
IF (UPPER(Final_Stage__c) == &quot;PW&quot;, IMAGE (&quot;/GlobalfoundryView/resource/DWC/DWC/PW.JPG&quot;, &quot;&quot;, 25, 50), 
IF (UPPER(Final_Stage__c) == &quot;PWA&quot;, IMAGE (&quot;/GlobalfoundryView/resource/DWC/DWC/PW.JPG&quot;, &quot;&quot;, 25, 50), 
IF (UPPER(Final_Stage__c) == &quot;FD&quot;, IMAGE (&quot;/GlobalfoundryView/resource/DWC/DWC/FD.JPG&quot;, &quot;&quot;, 25, 50), 
IF (UPPER(Final_Stage__c) == &quot;IFD&quot;, IMAGE (&quot;/GlobalfoundryView/resource/DWC/DWC/IFD.JPG&quot;, &quot;&quot;, 25, 50), 
IF (UPPER(Final_Stage__c) == &quot;FCF&quot;, IMAGE (&quot;/GlobalfoundryView/resource/DWC/DWC/FCF.JPG&quot;, &quot;&quot;, 25, 50), 
IF (UPPER(Final_Stage__c) == &quot;FCC&quot;, IMAGE (&quot;/GlobalfoundryView/resource/DWC/DWC/FCC.JPG&quot;, &quot;&quot;, 25, 50), 
IF (UPPER(Final_Stage__c) == &quot;WCR&quot;, IMAGE (&quot;/GlobalfoundryView/resource/DWC/DWC/WCR.JPG&quot;, &quot;&quot;, 25, 50), 
IF (UPPER(Final_Stage__c) == &quot;WEA&quot;, IMAGE (&quot;/GlobalfoundryView/resource/DWC/DWC/WEA.JPG&quot;, &quot;&quot;, 25, 50), 
IF (UPPER(Final_Stage__c) == &quot;POC&quot;, IMAGE (&quot;/GlobalfoundryView/resource/DWC/DWC/POC.JPG&quot;, &quot;&quot;, 25, 50), 
IF (UPPER(Final_Stage__c) == &quot;FCD&quot;, IMAGE (&quot;/GlobalfoundryView/resource/DWC/DWC/FCD.JPG&quot;, &quot;&quot;, 25, 50), 
IF (UPPER(Final_Stage__c) == &quot;PWO&quot;, IMAGE (&quot;/GlobalfoundryView/resource/DWC/DWC/PWO.JPG&quot;, &quot;&quot;, 25, 50), 
IF (UPPER(Final_Stage__c) == &quot;PA&quot;, IMAGE (&quot;/GlobalfoundryView/resource/DWC/DWC/PA.JPG&quot;, &quot;&quot;, 25, 50), 
IF (UPPER(Final_Stage__c) == &quot;POF&quot;, IMAGE (&quot;/GlobalfoundryView/resource/DWC/DWC/POF.JPG&quot;, &quot;&quot;, 25, 50), 
IMAGE (&quot;/GlobalfoundryView/resource/DWC/DWC/OPEN.JPG&quot;, &quot;&quot;, 25, 50))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rule Final Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rule_Type__c</fullName>
        <label>Rule Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SelectedBox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SelectedBox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Selected_AM__c</fullName>
        <label>Selected AM</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Waiver_Collaborator__c</fullName>
        <label>Waiver Collaborator</label>
        <referenceTo>Wavier_Collaborator__c</referenceTo>
        <relationshipLabel>Waiver Rule Lists</relationshipLabel>
        <relationshipName>Waiver_Rule_Lists</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Warning__c</fullName>
        <label>Warning !</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>delegate_field__c</fullName>
        <defaultValue>false</defaultValue>
        <label>delegate field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isAllPartyApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should be checked only if all groups approve the rule</description>
        <inlineHelpText>checked only if all groups approve the rule</inlineHelpText>
        <label>isAllPartyApproved?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isFAESubmitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isFAESubmitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isIntermediateSave__c</fullName>
        <defaultValue>false</defaultValue>
        <description>intermediate save</description>
        <label>isIntermediateSave</label>
        <type>Checkbox</type>
    </fields>
    <label>Waiver Rule List</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Design_Rule_Name__c</columns>
        <columns>Final_Stage__c</columns>
        <columns>Waiver_Collaborator__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DRC-{000000}</displayFormat>
        <label>Rule ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Waiver Rule Lists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>